--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,31 @@
-*~
 #*
-*.lst
+*~
 *.o
-TEST
+*.inf
+*.lst
 PIEIS
-SPIGOT
+AMINI
+ASPIGOT
+ATEST
+GMINI
+GSPIGOT
+GTEST
+PMINI
+PSPIGOT
+PTEST
+PMINI.s
+PSPIGOT.s
+PTEST.s
+QMINI
+QSPIGOT
+QTEST
+QMINI.s
+QSPIGOT.s
+QTEST.s
+UMINI
+USPIGOT
+UTEST
+lib/libunix.a
+mangle
+not_in_git/
 build.ssd
